GAP IS NO LONGER THEREEEEEE

--- a/sass/theme/_theme.scss
+++ b/sass/theme/_theme.scss
@@ -761,6 +761,13 @@ $terciary-lightest:#FFFFFF;
 
 body {
     font-family:'Montserrat';
+}
+
+#index-wrapper { 
+    overflow-x: hidden;
+}
+
+#page {
     overflow-x: hidden;
 }
 
